--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse-wtp'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'jacoco'
 apply plugin: 'war'
 
 group = 'com.co.ceiba'
@@ -34,4 +35,15 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('mysql:mysql-connector-java')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile group: 'org.json', name: 'json', version: '20090211'
+	
 }
+test {
+ systemProperties 'property': 'value'
+	jacoco {
+		append = false
+		destinationFile = file("jacoco/jacocoTest.exec")
+	}
+	reports.junitXml.destination = file ("jacoco/test-results")
+}
+jacocoTestReport.dependsOn(test)
