--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+		classpath "net.saliman:gradle-cobertura-plugin:2.2.7"
 	}
 }
 
@@ -16,6 +17,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'jacoco'
 apply plugin: 'war'
+apply plugin: 'cobertura'
 
 group = 'com.co.ceiba'
 version = '0.0.1-SNAPSHOT'
@@ -47,3 +49,11 @@ test {
 	reports.junitXml.destination = file ("jacoco/test-results")
 }
 jacocoTestReport.dependsOn(test)
+
+cobertura {
+    coverageFormats = ['html','xml']    
+    coverageIgnoreTrivial = true     
+    coverageReportDir = new File("$buildDir/reports/cobertura") 
+}
+
+test.finalizedBy(project.tasks.cobertura)
